--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -27,13 +27,14 @@
     "sortPackage": "sort-package-json"
   },
   "dependencies": {
-    "@discordia/debug": "file:../debug",
-    "@discordia/help-default": "file:../help-default",
+    "@discordia/debug": "^0.0.1",
+    "@discordia/help-default": "^0.0.1",
     "chalk": "^4.0.0",
     "discord.js": "^12.2.0",
     "lodash": "^4.17.15"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.com"
-  }
+  },
+  "gitHead": "4012c9450d86029a8cc48cc53d83df82ced62453"
 }
