--- a/packages/help-default/package.json
+++ b/packages/help-default/package.json
@@ -30,5 +30,6 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.com"
-  }
+  },
+  "gitHead": "4012c9450d86029a8cc48cc53d83df82ced62453"
 }
