--- a/packages/help-default/package.json
+++ b/packages/help-default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/help-default",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Default help action for the discordia framework",
   "keywords": [
     "discordia",
@@ -29,7 +29,8 @@
     "lodash": "^4.17.15"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.com"
+    "registry": "https://registry.npmjs.com",
+    "access": "public"
   },
-  "gitHead": "4012c9450d86029a8cc48cc53d83df82ced62453"
+  "gitHead": "0cf7bed2246dea76dbe3de83333c15aab2de9b38"
 }
