--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -28,7 +28,7 @@
     "sortPackage": "sort-package-json"
   },
   "dependencies": {
-    "@discordia/debug": "^0.0.8",
+    "@discordia/debug": "file:../debug",
     "chalk": "^4.0.0",
     "lodash": "^4.17.15"
   },
