--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
       "comma-dangle": "off",
       "function-paren-newline": "off",
       "implicit-arrow-linebreak": "off",
-      "object-curly-newline": "off",
       "indent": "off",
       "max-len": "off",
+      "object-curly-newline": "off",
       "prettier/prettier": "error"
     }
   },
@@ -80,5 +80,9 @@
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
     "sort-package-json": "^1.42.1"
+  },
+  "engines": {
+    "node": ">=12",
+    "npm": ">=6.10"
   }
 }
