--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -32,9 +32,13 @@
     "chalk": "^4.0.0",
     "lodash": "^4.17.15"
   },
+  "engines": {
+    "node": ">=12",
+    "npm": ">=6.10"
+  },
   "publishConfig": {
-    "registry": "https://registry.npmjs.com",
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.com"
   },
   "gitHead": "b6c98bc5a0d7d5af79ffbd08aea21156a926c789"
 }
