--- a/packages/complete/package.json
+++ b/packages/complete/package.json
@@ -31,9 +31,13 @@
     "@discordia/framework": "file:../framework",
     "@discordia/help-default": "file:../help-default"
   },
+  "engines": {
+    "node": ">=12",
+    "npm": ">=6.10"
+  },
   "publishConfig": {
-    "registry": "https://registry.npmjs.com",
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.com"
   },
   "gitHead": "b6c98bc5a0d7d5af79ffbd08aea21156a926c789"
 }
