--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint .",
+    "publish": "lerna publish from-git -y --no-verify-access",
     "sortPackage": "sort-package-json",
     "test": "jest",
     "test:watch": "jest --watch"
