--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
-        scope: "@discordia"
+        scope: discordia
     - run: npm ci
     - run: npm test
     - run: npm run publish
