--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -18,9 +18,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
-        scope: discordia
+        registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: npm test
-    - run: npm run publish
+    - run: npm run publish-ci
       env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
