--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -5,26 +5,42 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    tags:
+      - v*.*.*
 
 jobs:
-  release:
+  test:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
-        node-version: 12.x
+        node-version: 12
+    - run: npm ci
+    - run: npm test
+  publish:
+    needs: test
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12
         registry-url: 'https://registry.npmjs.org'
         scope: '@discordia'
     - run: npm ci
-    - run: npm test
-    - run: npm login
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     - run: npm run publish-ci
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  create-release:
+    needs: test
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+    - uses: actions/checkout@master
+    - uses: Roang-zero1/github-create-release-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
