--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -3,10 +3,14 @@
 
 name: Release
 
+# on:
+#   push:
+#     tags:
+#       - v*.*.*
+
 on:
   push:
-    tags:
-      - v*.*.*
+    branches: [ master ]
 
 jobs:
   test:
