--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -27,7 +27,7 @@ jobs:
   publish:
     needs: test
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v1
@@ -42,7 +42,7 @@ jobs:
   create-release:
     needs: test
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@master
     - uses: Roang-zero1/github-create-release-action@master
