--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:watch": "jest --watch",
     "commit": "git-cz",
     "commit:retry": "git-cz --retry",
-    "commitmsg": "commitlint -e"
+    "commitmsg": "commitlint -e",
+    "preversion": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "husky": {
     "hooks": {
@@ -76,6 +77,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "commitizen": "^4.0.5",
+    "conventional-changelog-cli": "^2.0.31",
     "cz-customizable": "^6.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
