--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   "author": "",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint .",
-    "publish-ci": "lerna publish from-package -y --no-verify-access",
-    "sortPackage": "sort-package-json",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "commit": "git-cz",
     "commit:retry": "git-cz --retry",
     "commitmsg": "commitlint -e",
+    "docs:build": "rm -rf docs/ && node docma.js",
+    "docs:dev": "nodemon --watch packages/ --watch guides/ --watch docma.js --exec npm run serveDocs",
+    "docs:publish": "npm run docs:build && gh-pages -d docs/",
+    "docs:serve": "DOCMA_BASE=/ npm run docma && light-server -s docs",
+    "lint": "eslint .",
+    "publish-ci": "lerna publish from-package -y --no-verify-access",
+    "sortPackage": "sort-package-json && lerna run sortPackage",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "preversion": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "husky": {
@@ -40,6 +44,14 @@
   },
   "lint-staged": {
     "*.js": "eslint --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "commitizen.config.js"
+    }
   },
   "prettier": {
     "printWidth": 120,
@@ -66,6 +78,7 @@
       "indent": "off",
       "max-len": "off",
       "object-curly-newline": "off",
+      "import/no-extraneous-dependencies": "off",
       "prettier/prettier": "error"
     }
   },
@@ -85,15 +98,18 @@
     "commitizen": "^4.0.5",
     "conventional-changelog-cli": "^2.0.31",
     "cz-customizable": "^6.2.0",
+    "docma": "^3.2.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsdoc": "^24.0.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "gh-pages": "^2.2.0",
     "husky": "^4.2.5",
     "jest": "^25.4.0",
     "lerna": "^3.20.2",
+    "light-server": "^2.6.4",
     "lint-staged": "^10.2.2",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
@@ -102,13 +118,5 @@
   "engines": {
     "node": ">=12",
     "npm": ">=6.10"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    },
-    "cz-customizable": {
-      "config": "commitizen.config.js"
-    }
   }
 }
