chore(build-tooling): setup docma and write first draft of guides

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -35,6 +35,7 @@ jobs:
     - run: npm run publish-ci
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - run: npm run docs:publish
   create-release:
     needs: test
     runs-on: ubuntu-latest
