--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "commit:retry": "git-cz --retry",
     "commitmsg": "commitlint -e",
     "docs:build": "rm -rf docs/ && node docma.js",
-    "docs:dev": "nodemon --watch packages/ --watch guides/ --watch docma.js --exec npm run serveDocs",
-    "// docs:publish": "npm run docs:build && gh-pages -d docs/",
-    "docs:serve": "DOCMA_BASE=/ npm run docma && light-server -s docs",
+    "docs:dev": "nodemon --watch packages/ --watch guides/ --watch docma.js --exec npm run docs:serve",
+    "docs:publish": "npm run docs:build && gh-pages -d docs/",
+    "docs:serve": "DOCMA_BASE=/ npm run docs:build && light-server -s docs",
     "lint": "eslint .",
     "publish-ci": "lerna publish from-package -y --no-verify-access",
     "sortPackage": "sort-package-json && lerna run sortPackage",
