refactor(multiple-packages): refactor default-help to a discordia action
Refactor default-help to a discordia action. Pass framework instance to discordia actions instead of
Discord.js client instance to give access to the `actions` array. Update tests and documentation.

BREAKING CHANGE:
@discordia/framework - options.help now must be null or DiscordiaAction

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@discordia/complete": "file:packages/complete",
     "@discordia/debug": "file:packages/debug",
     "@discordia/framework": "file:packages/framework",
-    "@discordia/help-default": "file:packages/help-default"
+    "@discordia/default-help": "file:packages/default-help"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
