--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@discordia/action": "file:../action",
     "@discordia/debug": "file:../debug",
-    "@discordia/help-default": "file:../help-default",
+    "@discordia/default-help": "file:../default-help",
     "chalk": "^4.0.0",
     "discord.js": "^12.2.0",
     "lodash": "^4.17.15"
