--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/action",
-  "version": "0.2.2",
+  "version": "0.2.3-alpha.0",
   "description": "Class for creating discordia actions",
   "keywords": [
     "discordia",
