chore(build-tooling): update release for prereleases

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -10,9 +10,7 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v1
@@ -33,6 +31,20 @@ jobs:
         scope: '@discordia'
     - run: npm ci
     - run: npm run publish-ci
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  publish-docs:
+    needs: test
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/') && github.ref != v*.*.*-*}}
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12
+        registry-url: 'https://registry.npmjs.org'
+        scope: '@discordia'
+    - run: npm ci
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     - run: npm run docs:build
