--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/framework",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "The main discordia framework",
   "keywords": [
     "discordia",
