--- a/packages/default-help/package.json
+++ b/packages/default-help/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/default-help",
-  "version": "1.0.1-alpha.2",
+  "version": "1.0.1",
   "description": "Default help action for the discordia framework",
   "keywords": [
     "discordia",
