--- a/packages/complete/package.json
+++ b/packages/complete/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/complete",
-  "version": "1.0.1",
+  "version": "1.0.2-alpha.0",
   "description": "A complete rollup of the packages in the Discordia monorepo",
   "keywords": [
     "discordia",
