--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.2-alpha.2",
+  "version": "1.0.2",
   "publishConfig": {
     "access": "public"
   },
