--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/debug",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.2",
   "description": "Wrapper of the `debug` library for discordia",
   "keywords": [
     "discordia",
