--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discordia/framework",
-  "version": "1.0.2-alpha.2",
+  "version": "1.0.2",
   "description": "The main discordia framework",
   "keywords": [
     "discordia",
