feat(action-current-weather): initial current weather implementation
Do an initial implementation of the current weather action with the open weather API

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "@discordia/action": "file:packages/action",
+    "@discordia/action-weather-current": "file:actions/action-current-weather",
     "@discordia/complete": "file:packages/complete",
     "@discordia/create-discordia-action": "file:generators/create-discordia-action",
     "@discordia/create-discordia-bot": "file:generators/create-discordia-bot",
