--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "generators/*",
     "packages/*"
   ],
-  "version": "independent",
+  "version": "1.4.0",
   "publishConfig": {
     "access": "public"
   }
