--- a/package.json
+++ b/package.json
@@ -89,14 +89,16 @@
   },
   "dependencies": {
     "@discordia/action": "file:packages/action",
+    "@discordia/action-anilist-anime": "file:actions/AniList/action-anilist-anime",
+    "@discordia/action-anilist-manga": "file:actions/AniList/action-anilist-manga",
+    "@discordia/action-anilist-user": "file:actions/AniList/action-anilist-user",
     "@discordia/action-openweather-current": "file:actions/OpenWeather/action-openweather-current",
     "@discordia/complete": "file:packages/complete",
     "@discordia/create-discordia-action": "file:generators/create-discordia-action",
     "@discordia/create-discordia-bot": "file:generators/create-discordia-bot",
     "@discordia/debug": "file:packages/debug",
     "@discordia/default-help": "file:packages/default-help",
-    "@discordia/framework": "file:packages/framework",
-    "dotenv": "^8.2.0"
+    "@discordia/framework": "file:packages/framework"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -105,12 +107,14 @@
     "conventional-changelog-cli": "^2.0.31",
     "cz-customizable": "^6.2.0",
     "docma": "^3.2.2",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsdoc": "^24.0.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "fast-glob": "^3.2.2",
     "gh-pages": "^2.2.0",
     "husky": "^4.2.5",
     "jest": "^25.5.4",
